--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "eslint-config-recommended": "^4.1.0",
+    "eslint-plugin-react": "^7.33.1",
     "lodash": "^4.17.21",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "typescript": "5.1.6"
   }
 }
