--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
+    "eslint-config-next": "^13.5.4",
     "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-react": "^7.33.1",
     "lodash": "^4.17.21",
-    "next": "13.4.13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-paginate": "^8.2.0",
+    "react-toastify": "^9.1.3",
     "typescript": "5.1.6"
   }
 }
