--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-paginate": "^8.2.0",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6",
     "typescript": "5.1.6"
   }
 }
