--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-paginate": "^8.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
     "typescript": "5.1.6"
