--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
+    "swiper": "^11.0.5",
     "typescript": "5.1.6"
   }
 }
