--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "^13.5.4",
     "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-react": "^7.33.1",
+    "fuzzy-search": "^3.2.1",
     "lodash": "^4.17.21",
     "next": "^13.5.4",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/fuzzy-search": "^2.1.5",
     "@types/react-datepicker": "^4.19.5"
   }
 }
