--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.33.1",
     "framer-motion": "^11.3.2",
     "fuzzy-search": "^3.2.1",
+    "json-server": "^1.0.0-beta.1",
     "lodash": "^4.17.21",
     "next": "^13.5.4",
     "react": "^18.2.0",
